kubernetes/nrp-prod/gradio-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gradio-ui
spec:
  template:
    spec:
      containers:
        - name: gradio-ui
