kubernetes/nrp-prod/weaviate-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weaviate
spec:
  template:
    spec:
      containers:
      - name: weaviate
        volumeMounts:
        - name: prod-weaviate-pvc
          mountPath: /var/lib/weaviate
      volumes:
      - name: prod-weaviate-pvc
        emptyDir: {}
