kubernetes/nrp-prod/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: haproxy
  rules:
  - host: sage-hybrid-search.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gradio-ui
            port:
              number: 7860
  tls:
  - hosts:
    - sage-hybrid-search.nrp-nautilus.io
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weavloader-metrics-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: haproxy
  rules:
  - host: weavloader-metrics.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weavloader-metrics
            port:
              number: 8080
  tls:
  - hosts:
    - weavloader-metrics.nrp-nautilus.io
